@@ -158,7 +158,47 @@
 	  TAO's Persistent State Service implementation.
 	</P>
       </LI>
+      <LI><P><A HREF="tao/ifr/index.html">TAO_IFR: </A>
+	  TAO's Interface Repository Service implementation.
+	</P>
+      </LI
     </UL>
+    <!--The following is CIAO replated-->
+
+    <hr>
+    <UL>
+      <LI><P><A HREF="tao/ciao/ciao/index.html">
+            CIAO:
+	  </A>
+	  CIAO's core implementation.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ciao/tools/assembly_deployer/index.html">Assembly_Deployer:
+	  </A>
+	  CIAO's assembly deployer/manager implementation.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ciao/tools/serveractivator/index.html">ServerActivator:
+	  </A>
+	  CIAO's ServerActivator implementation.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ciao/tools/daemon/index.html">Daemon:
+	  </A>
+	  CIAO's per-host daemon prcess implementation.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ciao/tools/componentserver/index.html">ComponentServer:
+	  </A>
+	  CIAO's component server implementation.
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/ciao/tools/xml_helpers/index.html">XML_HELPERS: </A>
+	  XML helper classes to aid the parsing and manupilation of XML files.
+	</P>
+      </LI>
+    </UL>
+
 
   </body>
 </html>
